--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@prisma/client": "^5.7.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
@@ -24,6 +25,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "prisma": "^5.7.0",
     "typescript": "^5"
   }
 }
