--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "prisma": "^5.7.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.22.4"
   }
 }
